--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy":"npm run build && echo 'secundaria5berazategui.com'> ./build/CNAME ",
+    "predeploy":"npm run build && echo secundaria5berazategui.com > ./build/CNAME ",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
