--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "secundaria5",
   "version": "0.1.0",
   "private": true,
-  "homepage":"secundaria5berazategui.com",
+  "homepage":"http://secundaria5berazategui.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
